Edit index to contain overview of backend docs
This was formerly a copy of the README, which would be redundant info
we're trying to get rid of.